--- a/SuperShop.Prism/SuperShop.Prism/Resources/Resource.resx
+++ b/SuperShop.Prism/SuperShop.Prism/Resources/Resource.resx
@@ -127,4 +127,16 @@
   <data name="Products" xml:space="preserve">
     <value>Products</value>
   </data>
+  <data name="Stock" xml:space="preserve">
+    <value>Stock</value>
+  </data>
+  <data name="IsAvailable" xml:space="preserve">
+    <value>Is available</value>
+  </data>
+  <data name="LastSale" xml:space="preserve">
+    <value>Last sale</value>
+  </data>
+  <data name="LastPurchase" xml:space="preserve">
+    <value>Last purchase</value>
+  </data>
 </root>
