--- a/SuperShop.Prism/SuperShop.Prism/Resources/Resource.es.resx
+++ b/SuperShop.Prism/SuperShop.Prism/Resources/Resource.es.resx
@@ -107,7 +107,7 @@
     <value>Aceptar</value>
   </data>
   <data name="Loading" xml:space="preserve">
-    <value>Cargando</value>
+    <value>Cargando...</value>
   </data>
   <data name="SearchProduct" xml:space="preserve">
     <value>Buscar Producto</value>
@@ -126,5 +126,17 @@
   </data>
   <data name="Products" xml:space="preserve">
     <value>Productos</value>
+  </data>
+  <data name="Stock" xml:space="preserve">
+    <value>Cantidad</value>
+  </data>
+  <data name="IsAvailable" xml:space="preserve">
+    <value>Está disponible</value>
+  </data>
+  <data name="LastSale" xml:space="preserve">
+    <value>Última venta</value>
+  </data>
+  <data name="LastPurchase" xml:space="preserve">
+    <value>Última compra</value>
   </data>
 </root>
