Master detail page

--- a/SuperShop.Prism/SuperShop.Prism/Resources/Resource.pt.resx
+++ b/SuperShop.Prism/SuperShop.Prism/Resources/Resource.pt.resx
@@ -139,4 +139,16 @@
   <data name="LastPurchase" xml:space="preserve">
     <value>Última compra</value>
   </data>
+  <data name="Login" xml:space="preserve">
+    <value>Entrar</value>
+  </data>
+  <data name="ModifyUser" xml:space="preserve">
+    <value>Modificar utilizador</value>
+  </data>
+  <data name="ShowPurchaseHistory" xml:space="preserve">
+    <value>Mostrar histórico de compras</value>
+  </data>
+  <data name="ShowShoppingCar" xml:space="preserve">
+    <value>Mostrar carrinho de compras</value>
+  </data>
 </root>
