--- a/SuperShop.Prism/SuperShop.Prism/Resources/Resource.es.resx
+++ b/SuperShop.Prism/SuperShop.Prism/Resources/Resource.es.resx
@@ -139,4 +139,16 @@
   <data name="LastPurchase" xml:space="preserve">
     <value>Última compra</value>
   </data>
+  <data name="Login" xml:space="preserve">
+    <value>Iniciar sesión</value>
+  </data>
+  <data name="ModifyUser" xml:space="preserve">
+    <value>Modificar usuario</value>
+  </data>
+  <data name="ShowPurchaseHistory" xml:space="preserve">
+    <value>Mostrar historial de compras</value>
+  </data>
+  <data name="ShowShoppingCar" xml:space="preserve">
+    <value>Mostrar Carrito de Compra</value>
+  </data>
 </root>
