--- a/SuperShop.Prism/SuperShop.Prism/Resources/Resource.resx
+++ b/SuperShop.Prism/SuperShop.Prism/Resources/Resource.resx
@@ -139,4 +139,16 @@
   <data name="LastPurchase" xml:space="preserve">
     <value>Last purchase</value>
   </data>
+  <data name="Login" xml:space="preserve">
+    <value>Login</value>
+  </data>
+  <data name="ModifyUser" xml:space="preserve">
+    <value>Modify user</value>
+  </data>
+  <data name="ShowPurchaseHistory" xml:space="preserve">
+    <value>Show purchase history</value>
+  </data>
+  <data name="ShowShoppingCar" xml:space="preserve">
+    <value>Show shopping car</value>
+  </data>
 </root>
